--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Lyd i datamaskiner</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="New webdeveloper trying to learn how to code">
+    <meta name="keywords" content="HTML, CSS, Web design">
+    <meta name="author" content="Martin Hovland Olsson">
+    <meta rel="shortcut icon" type="image/x-icon" href="">
   </head>
   <body>
     <h1>Forklare hvordan de fysiske signalene i datautstyr kan tolkes som lyd</h1>
