Lagt på ekstra.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <meta rel="shortcut icon" type="image/x-icon" href="">
   </head>
   <body>
+    <div class="mainheader">
+      <h1><span class="titlecolor">Lyd</span> i datamaskiner</h1>
+    </div>
     <h1>Forklare hvordan de fysiske signalene i datautstyr kan tolkes som lyd</h1>
-    <p>
-      lagrer en bølge, med noen datapunkter.
-    </p>
+    <p>Lagrer en bølge, med noen datapunkter.</p>
   </body>
 </html>
