--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
     <meta name="author" content="Martin Hovland Olsson">
     <meta rel="shortcut icon" type="image/x-icon" href="">
   </head>
+
   <body>
     <div class="mainheader">
       <h1><span class="titlecolor">Lyd</span> i datamaskiner</h1>
     </div>
     <h1>Forklare hvordan de fysiske signalene i datautstyr kan tolkes som lyd</h1>
     <p>Lagrer en bølge, med noen datapunkter.</p>
+
+
+
+
+    <h3>Hvordan lagre lyd</h3>
+    <p> Lagres som datapunkter fra en graf </p>
+    
   </body>
 </html>
