--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
 
     <h3>Hvordan lagre lyd</h3>
     <p> Lagres som datapunkter fra en graf </p>
-    
+    <p>  </p>
+
+    <br>
+    <br>
+
+    <h3>Forkjellige formater </h3>
+    <ul>
+      <li>Lossless</li>
+      <ul>
+        <li>FLAC "Free lossless Audio Codec"</li>
+      </ul>
+      <li>Lossy</li>
+      <ul>
+        <li>mp3</li>
+      </ul>
+    </ul>
+
+
   </body>
 </html>
