legge til bilde

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
 
     <h3>Hvordan lagre lyd</h3>
-    <p> Lagres som datapunkter fra en graf </p>
-    <p>  </p>
+    <p> Lagres som datapunkter fra en graf. </p>
+    <p> Det betyr at jo flere datapunkter, jo bedre lydkvalitet. </p>
+    <img src="bilder/sin_bolge.PNG" alt="sin_bolge"><img>
 
     <br>
     <br>
