--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
         <h1><span class="titlecolor">Lyd</span> i datamaskiner</h1>
       </div>
     </header>
-    <h1>Forklare hvordan de fysiske signalene i datautstyr kan tolkes som lyd</h1>
-    <p>Lagrer en bølge, med noen datapunkter.</p>
+    <div class="sidebutton">
+    </div>
+    <div class="maincontent">
+      <h1>Forklare hvordan de fysiske signalene i datautstyr kan tolkes som lyd</h1>
+      <p>Lagrer en bølge, med noen datapunkter.</p>
 
 
 
 
-    <h3>Hvordan lagre lyd</h3>
-    <p> Lagres som datapunkter fra en graf </p>
-    
+      <h3>Hvordan lagre lyd</h3>
+      <p> Lagres som datapunkter fra en graf </p>
+    </div>
   </body>
 </html>
