--- a/index.html
+++ b/index.html
@@ -33,16 +33,20 @@
 
     <br>
     <br>
-    
+
     <h3>Forkjellige formater </h3>
     <ul>
-      <li>Lossless</li>
+      <li>Ukomprimert</li>
+      <ul>
+        <li>WAV "Wave Audio File Format"</li>
+      </ul>
+      <li>Lossless komprimering</li>
       <ul>
         <li>FLAC "Free lossless Audio Codec"</li>
       </ul>
-      <li>Lossy</li>
+      <li>Lossy komprimering</li>
       <ul>
-        <li>mp3</li>
+        <li>MP3 "MPEG-1/-2 Audio Layer III"</li>
       </ul>
     </ul>
 
