--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </div>
     </header>
     <div class="sidebutton">
+      <img src="bilder/arrow.png" alt="arrow">
     </div>
     <div class="maincontent">
       <h1>Forklare hvordan de fysiske signalene i datautstyr kan tolkes som lyd</h1>
@@ -33,7 +34,7 @@
 
     <br>
     <br>
-    
+
     <h3>Forkjellige formater </h3>
     <ul>
       <li>Lossless</li>
@@ -45,6 +46,6 @@
         <li>mp3</li>
       </ul>
     </ul>
-
+    </div>
   </body>
 </html>
