ferdig for dagen

--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
     <div class="sidebutton">
     </div>
     <div class="maincontent">
-      <h1>Forklare hvordan de fysiske signalene i datautstyr kan tolkes som lyd</h1>
-      <p>Lagrer en bølge, med noen datapunkter.</p>
+      <h2>Oppgave: Forklare hvordan de fysiske signalene i datautstyr kan tolkes som lyd</h2>
+
 
 
 
 
     <h3>Hvordan lagre lyd</h3>
-    <p> Lagres som datapunkter fra en graf. </p>
-    <p> Det betyr at jo flere datapunkter, jo bedre lydkvalitet. </p>
+    <p> Lagres som datapunkter fra en graf.
+    Det betyr at jo flere datapunkter, jo bedre lydkvalitet.
+    </p>
     <img src="bilder/sin_bolge.PNG" alt="sin_bolge"><img>
 
     <br>
