--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     </header>
     <div class="sidebutton">
       <img src="bilder/arrow.png" alt="arrow">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="lyd.html">Lyd</a></li>
+          <li><a href="video.html">video</a></li>
+          <li><a href="forklaring.html">Forklaring</a></li>
+          <li><a href="kilder.html">Kilder</a></li>
+        </ul>
     </div>
     <div class="maincontent">
       <h1>Forklare hvordan de fysiske signalene i datautstyr kan tolkes som lyd</h1>
