--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </header>
     <div class="sidebutton">
       <img src="bilder/arrow.png" alt="arrow">
+      <nav>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="lyd.html">Lyd</a></li>
@@ -26,6 +27,7 @@
           <li><a href="forklaring.html">Forklaring</a></li>
           <li><a href="kilder.html">Kilder</a></li>
         </ul>
+      </nav>
     </div>
     <div class="maincontent">
       <h2>Oppgave: Forklare hvordan de fysiske signalene i datautstyr kan tolkes som lyd</h2>
