--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </nav>
     </div>
     <div class="maincontent">
-      <h2>Oppgave: Forklare hvordan de fysiske signalene i datautstyr kan tolkes som lyd</h2>
+      <h2><span class="titlecolor">Oppgave:</span> Forklare hvordan de fysiske signalene i datautstyr kan tolkes som lyd</h2>
 
 
 
@@ -61,5 +61,9 @@
       </ul>
     </ul>
     </div>
+
+    <footer class="mainfooter">
+      <p>Copyright &copy; <a href="#" title="Martin"><b>Martin, Jonar og Peder</b></a></p>
+    </footer>
   </body>
 </html>
