--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Lyd i datamaskiner</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="New webdeveloper trying to learn how to code">
+    <meta name="description" content="New webdevelopers trying to learn how to code">
     <meta name="keywords" content="HTML, CSS, Web design">
-    <meta name="author" content="Martin Hovland Olsson">
+    <meta name="author" content="Martin, Jonar, Peder">
     <meta rel="shortcut icon" type="image/x-icon" href="">
   </head>
 
@@ -21,9 +21,9 @@
       <img src="bilder/arrow.png" alt="arrow">
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="#">Hjem</a></li>
           <li><a href="lyd.html">Lyd</a></li>
-          <li><a href="video.html">video</a></li>
+          <li><a href="video.html">Video</a></li>
           <li><a href="forklaring.html">Forklaring</a></li>
           <li><a href="kilder.html">Kilder</a></li>
         </ul>
@@ -40,8 +40,11 @@
     <p> Lagres som datapunkter fra en graf.
     Det betyr at jo flere datapunkter, jo bedre lydkvalitet.
     </p>
-    <img src="bilder/sin_bolge.PNG" alt="sin_bolge"><img>
-
+      <table border="2">
+        <tr>
+          <td><img src="bilder/sin_bolge.PNG" alt="sin_bolge"></td>
+        </tr>
+      </table>
     <br>
     <br>
 
