--- a/index.html
+++ b/index.html
@@ -22,17 +22,21 @@
       <nav>
         <ul>
           <li><a href="#">Hjem</a></li>
-          <li><a href="lyd.html">Lyd</a></li>
-          <li><a href="video.html">Video</a></li>
-          <li><a href="forklaring.html">Forklaring</a></li>
-          <li><a href="kilder.html">Kilder</a></li>
+          <li><a href="#lyd">Lyd</a></li>
+          <li><a href="#video">Video</a></li>
+          <li><a href="#forklaring">Forklaring</a></li>
+          <li><a href="#kilder">Kilder</a></li>
         </ul>
       </nav>
     </div>
+
+
     <div class="maincontent">
       <h2><span class="titlecolor">Oppgave:</span> Forklare hvordan de fysiske signalene i datautstyr kan tolkes som lyd</h2>
 
-    <h3>Hvordan lagre lyd</h3>
+    
+
+    <h3 id="forklaring">Hvordan lagre lyd</h3>
     <p> Lagres som datapunkter fra en graf.
     Det betyr at jo flere datapunkter, jo bedre lydkvalitet.
     </p>
@@ -60,6 +64,9 @@
       </ul>
     </ul>
     </div>
+
+
+
 
     <footer class="mainfooter">
       <p>Copyright &copy; <a href="#" title="Martin"><b>Martin, Jonar og Peder</b></a></p>
