--- a/index.html
+++ b/index.html
@@ -30,12 +30,8 @@
       </nav>
     </div>
 
-
-
     <div class="maincontent">
       <h2><span class="titlecolor">Oppgave:</span> Forklare hvordan de fysiske signalene i datautstyr kan tolkes som lyd</h2>
-
-
 
     <h3 id="forklaring">Hvordan lagre lyd</h3>
     <p> Lagres som datapunkter fra en graf.
@@ -68,6 +64,12 @@
 
 
 
+
+
+    <h3 id="kilder">Kilder</h3>
+    <ul>
+      <li>Hefte</li>
+    </ul>
 
     <footer class="mainfooter">
       <p>Copyright &copy; <a href="#" title="Martin"><b>Martin, Jonar og Peder</b></a></p>
