forklaring av lyd

--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
       <h2><span class="titlecolor">Oppgave:</span> Forklare hvordan de fysiske signalene i datautstyr kan tolkes som lyd</h2>
 
     <h3 id="forklaring">Hvordan lagre lyd</h3>
-    
-    <p> Lagres som datapunkter fra en graf.
-    Det betyr at jo flere datapunkter, jo bedre lydkvalitet.
-    </p>
+
+    <p> Lyd er trykkbølger som beveger seg gjennom lufta. Høyttalere danner lydbølger ved og vibrerer sånn at ørene våre er i stand til å høre lydbølgene. Hvis du ser på den svarte kurven under så ser du et originalt lydsignal fra noe som f.eks. en gitar, for at vi skal digitalisere denne lyden må vi sample lyden flere ganger med forskjellige verdier. Etter nok samples setter vi samplene sammen som gjør at vi får en fullstendig lydfil.</p>
       <table border="1">
         <tr>
           <td><img src="bilder/sin_bolge.PNG" alt="sin_bolge"></td>
