--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <div class="mainheader">
-        <h1><span class="titlecolor">Lyd</span> i datamaskiner</h1>
+        <h1><span class="titlecolor">Lyd</span> i datamaskiner</h1>w
       </div>
     </header>
     <div class="sidebutton">
@@ -22,9 +22,9 @@
       <nav>
         <ul>
           <li><a href="#">Hjem</a></li>
+          <li><a href="#forklaring">Forklaring</a></li>
           <li><a href="#lyd">Lyd</a></li>
           <li><a href="#video">Video</a></li>
-          <li><a href="#forklaring">Forklaring</a></li>
           <li><a href="#kilder">Kilder</a></li>
         </ul>
       </nav>
@@ -68,7 +68,7 @@
 
     <h3 id="kilder">Kilder</h3>
     <ul>
-      <li>Hefte</li>
+      <li>Hefte vi fikk</li>
     </ul>
 
     <footer class="mainfooter">
