--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <div class="mainheader">
-        <h1><span class="titlecolor">Lyd</span> i datamaskiner</h1>w
+        <h1><span class="titlecolor">Lyd</span> i datamaskiner</h1>
       </div>
     </header>
     <div class="sidebutton">
